Bug 1763630 - Connect device input via a main-thread only NativeInputTrack r=padenot

We should keep a main-thread only NativeInputTrack member variable in
AudioProcessingTrack and use it to connect and disconnect the device
input which open and close audio microphone in MTG.

Differential Revision: https://phabricator.services.mozilla.com/D143412